# exercise

./: .gitignore  setup-china-mirror.ps1
5minAI/: ALIYUN_WEATHER_SETUP.md  API_SETUP.md  README.md  agent.py  config_guide.md  llm_client.py  test_agent_simple.py  test_llm.py  tools.py  vote_analysis.py
AIBaseDemo/: .env.example  .gitignore  requirements.txt
AgentScopeDemo/: .env.example  .gitignore  .gitmodules  CODE_FLOW_DIAGRAMS.md  DEBUG_BREAKPOINTS.md  PYPI_SOURCE_CONFIG.md  QWEN_CONFIG.md  REACT_AGENT_FEATURES.md  config.py  main_cn.py  main_cn_clean.py  requirements.txt  test_config.py  test_new_config.py  test_new_config_direct.py  test_qwen.py  verify_config.py  配置总结.md
AutoGenDemo/.trae/templates/python-fastapi-react/files/apps/server/: main.py  pyproject.toml  requirements.txt
CamelDemo/: DIAGRAMS_README.md  DigitalBookWriting.py  requirements.txt
DeerFlow2/: README.md  README_zh.md  config.example.yaml  deer-flow.code-workspace
LanGraphDemo/: Dialogue_System.py
chapter10/: 01_TestConnect.py  02_Connect2MCP.py  03_GitHubMCP.py  04_MCPTransport.py  05_UseMCPToolInAgent.py  06_MultiAgentDocumentAssist.py  07_SimpleA2AAgent.py  08_CustomA2AAgent.py  09_A2A_Client.py  09_A2A_WithAgent.py  10_A2ATool_Simple.py  10_AgentNegotiation.py  10_CustomerService.py  14_test_weather_server.py  14_weather_agent.py  14_weather_mcp_server.py  http_server.py  report.md  test_simple_client.py  test_simple_server.py  test_weather_direct.py
chapter11/: 00_quick_test.py  test_import.py
chapter12/: docker-compose.yml  verify_database_config.py
chapter7/: config.py  (+8 more)
(+537 files in other folders)
