[project]
name = "{{PROJECT_NAME}}"
version = "{{PROJECT_VERSION}}"
description = "{{PROJECT_DESCRIPTION}}"
requires-python = ">=3.11"
dependencies = [
    "fastapi=={{FASTAPI_VERSION}}",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
